--- a/index.html
+++ b/index.html
@@ -143,6 +143,86 @@
 
 
     <section id="sobre-mim" class="sessao"><!--Sobre mim-->
+
+        <div class="row text-center">
+            <div class="col-md-12">
+                <h1 class="txt-sobre-mim">Conhecimentos</h1>
+            </div>
+        </div>
+
+        <div class="container text-center conhecimentos">
+            <div class="row row-cols-4">
+                <div class="col">
+                    <p>
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#html"
+                            aria-expanded="false" aria-controls="html">
+                            <i class="fa-brands fa-html5"></i>
+                        </button>
+                    </p>
+                    <div class="collapse collapse-horizontal" id="html">
+                        <div class="card card-body" style="width: 300px;">
+                            HTML (HyperText Markup Language): É a linguagem de marcação usada para criar a estrutura e o
+                            conteúdo de uma página da web. É como o esqueleto de uma página, onde são definidos os
+                            elementos como cabeçalhos, parágrafos, imagens, links e outros elementos.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <p>
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#css"
+                            aria-expanded="false" aria-controls="css">
+                            <i class="fa-brands fa-css3-alt"></i>
+                        </button>
+                    </p>
+                    <div class="collapse collapse-horizontal" id="css">
+                        <div class="card card-body" style="width: 300px;">
+                            CSS (Cascading Style Sheets): É uma linguagem de estilo usada para dar aparência e formatar
+                            os elementos HTML. Com CSS, é possível definir cores, fontes, tamanhos, posicionamentos e
+                            outros estilos para deixar a página com um visual agradável e personalizado.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <p>
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#js"
+                            aria-expanded="false" aria-controls="js">
+                            <i class="fa-brands fa-js"></i>
+                        </button>
+                    </p>
+                    <div class="collapse collapse-horizontal" id="js">
+                        <div class="card card-body" style="width: 300px;">
+                            JavaScript: É uma linguagem de programação que permite adicionar interatividade e
+                            funcionalidades às páginas da web. Com JavaScript, é possível criar animações, manipular
+                            elementos da página, validar formulários, realizar requisições a servidores e muito mais.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <p>
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#bt"
+                            aria-expanded="false" aria-controls="bt">
+                            <i class="fa-brands fa-bootstrap"></i>
+                        </button>
+                    </p>
+                    <div class="collapse collapse-horizontal" id="bt">
+                        <div class="card card-body" style="width: 300px;">
+                            Bootstrap: É um framework de desenvolvimento web que fornece uma coleção de estilos CSS e
+                            componentes pré-estilizados, além de funcionalidades JavaScript. Ele facilita a criação de
+                            páginas responsivas e com um design moderno, sem a necessidade de escrever todo o código do
+                            zero. O Bootstrap permite criar rapidamente layouts e elementos comumente usados, como
+                            menus, botões, formulários, carrosséis, entre outros.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <hr style="border: 2px solid #0A192F;">
+
         <div class="row text-center">
             <div class="col-md-12">
                 <h1 class="txt-sobre-mim">Projetos</h1>
