--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="nav-principal">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="" class="nav-link"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
+                            <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank" class="nav-link"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link"><i class="fa-brands fa-square-github"></i> Github</a>
+                            <a href="https://github.com/Victor-Louback" target="_blank" class="nav-link"><i class="fa-brands fa-square-github"></i> Github</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link"><i class="fa-brands fa-square-instagram"></i> Instagram</a>
+                            <a href="https://www.instagram.com/loubackdev/" target="_blank" class="nav-link"><i class="fa-brands fa-square-instagram"></i> Instagram</a>
                         </li>
 
                         <li class="nav-item divisor"></li>
 
                         <li class="nav-item">
-                            <a href="" class="nav-link"><i class="fa-solid fa-envelope"></i> Gmail</a>
+                            <a href="mailto:victorloubackfaria@gmail.com" target="_blank" class="nav-link"><i class="fa-solid fa-envelope"></i> Gmail</a>
                         </li>
                     </ul>
                 </div>
@@ -53,10 +53,10 @@
                 <h1 class="txt2">front-end</h1>
                 <p>Me chamo Victor Louback, 22 anos, Desenvolvedor front-end HTML, CSS, JS e bootstrap <br>Saiba mais
                     sobre mim</p>
-                <a href="" class="btn btn-lg btn-custom">
+                <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank" class="btn btn-lg btn-custom">
                     <i class="fa-brands fa-linkedin"></i> Linkedin
                 </a>
-                <a href="" class="btn btn-lg btn-custom">
+                <a href="https://github.com/Victor-Louback" target="_blank" class="btn btn-lg btn-custom">
                     <i class="fa-brands fa-square-github"></i> Github
                 </a>
             </div>
@@ -79,7 +79,7 @@
                     <p>Olá! Sou Victor Louback, um entusiasta da tecnologia de 22 anos, embarcando em uma jornada de
                         aprendizado em desenvolvimento web e animado para compartilhar meu progresso com vocês.</p>
                     <p>Para compartilhar minha jornada de aprendizado, conectar-me com outros profissionais e inspirar a
-                        comunidade de desenvolvedores, criei o perfil <a href="#">@loubackdev</a> no Instagram.</p>
+                        comunidade de desenvolvedores, criei o perfil <a href="https://www.instagram.com/loubackdev/" target="_blank">@loubackdev</a> no Instagram.</p>
                     <p>No meu perfil, compartilho dicas, insights e recursos relacionados ao desenvolvimento web. É um
                         espaço onde posso interagir com pessoas apaixonadas por tecnologia, trocar experiências e
                         aprender juntos.</p>
@@ -152,14 +152,14 @@
 
         <div class="container">
             <div class="tecnologia">
-              <ul class="list-inline d-flex justify-content-evenly">
-                <li class="list-inline-item"><i class="fab fa-html5"></i><br> <span>HTML</span></li>
-                <li class="list-inline-item"><i class="fab fa-css3-alt"></i><br> <span>CSS</span></li>
-                <li class="list-inline-item"><i class="fab fa-js"></i><br> <span>JavaScript</span></li>
-                <li class="list-inline-item"><i class="fab fa-bootstrap"></i><br> <span>Bootstrap</span></li>
-              </ul>
+                <ul class="list-inline d-flex justify-content-evenly">
+                    <li class="list-inline-item"><i class="fab fa-html5"></i><br> <span>HTML</span></li>
+                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i><br> <span>CSS</span></li>
+                    <li class="list-inline-item"><i class="fab fa-js"></i><br> <span>JavaScript</span></li>
+                    <li class="list-inline-item"><i class="fab fa-bootstrap"></i><br> <span>Bootstrap</span></li>
+                </ul>
             </div>
-          </div>
+        </div>
 
         <hr style="border: 2px solid #0A192F;">
 
@@ -203,7 +203,8 @@
                                     replicar a aparência e funcionalidades do site original.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://victor-louback.github.io/projeto-inicial-spotify/index.html" target="_blank"
+                                        <a href="https://victor-louback.github.io/projeto-inicial-spotify/index.html"
+                                            target="_blank"
                                             class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
                                         <a href="https://github.com/Victor-Louback/projeto-inicial-spotify"
                                             target="_blank"
@@ -259,13 +260,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container ">
+            <p class="text-center">&copy; 2023 Victor Louback. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
 
 
-                <script src="https://kit.fontawesome.com/911919df65.js" crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-                    crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/911919df65.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
