--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </main>
 
-    <section id="sobre-mim" class="sessao"><!--Sobre mim-->
+    <section id="sessao-1" class="sessao"><!--Sobre mim-->
         <div class="row text-center">
             <div class="col-md-12">
                 <h1 class="txt-sobre-mim h1">Sobre mim</h1>
@@ -112,7 +112,7 @@
     </section><!--/Sobre mim-->
 
 
-    <section id="atualmente" class="sessao"><!--atualmente-->
+    <section id="sessao-2" class="sessao"><!--atualmente-->
         <div class="row text-center">
             <div class="col-md-12">
                 <h1 class="txt-atualemte h1">O que estou fazendo atualmente</h1>
@@ -142,7 +142,7 @@
     </section><!--/atualmente-->
 
 
-    <section id="sobre-mim" class="sessao"><!--Sobre mim-->
+    <section id="sessao-1" class="sessao"><!--Sobre mim-->
 
         <div class="row text-center">
             <div class="col-md-12">
