--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Portfólio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,19 +29,23 @@
                 <div class="collapse navbar-collapse justify-content-end" id="nav-principal">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank" class="nav-link"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
+                            <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank"
+                                class="nav-link"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://github.com/Victor-Louback" target="_blank" class="nav-link"><i class="fa-brands fa-square-github"></i> Github</a>
+                            <a href="https://github.com/Victor-Louback" target="_blank" class="nav-link"><i
+                                    class="fa-brands fa-square-github"></i> Github</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://www.instagram.com/loubackdev/" target="_blank" class="nav-link"><i class="fa-brands fa-square-instagram"></i> Instagram</a>
+                            <a href="https://www.instagram.com/loubackdev/" target="_blank" class="nav-link"><i
+                                    class="fa-brands fa-square-instagram"></i> Instagram</a>
                         </li>
 
                         <li class="nav-item divisor"></li>
 
                         <li class="nav-item">
-                            <a href="mailto:victorloubackfaria@gmail.com" target="_blank" class="nav-link"><i class="fa-solid fa-envelope"></i> Gmail</a>
+                            <a href="mailto:victorloubackfaria@gmail.com" target="_blank" class="nav-link"><i
+                                    class="fa-solid fa-envelope"></i> Gmail</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +60,8 @@
                 <h1 class="txt2">front-end</h1>
                 <p>Me chamo Victor Louback, 22 anos, Desenvolvedor front-end HTML, CSS, JS e bootstrap <br>Saiba mais
                     sobre mim</p>
-                <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank" class="btn btn-lg btn-custom">
+                <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank"
+                    class="btn btn-lg btn-custom">
                     <i class="fa-brands fa-linkedin"></i> Linkedin
                 </a>
                 <a href="https://github.com/Victor-Louback" target="_blank" class="btn btn-lg btn-custom">
@@ -79,7 +87,8 @@
                     <p>Olá! Sou Victor Louback, um entusiasta da tecnologia de 22 anos, embarcando em uma jornada de
                         aprendizado em desenvolvimento web e animado para compartilhar meu progresso com vocês.</p>
                     <p>Para compartilhar minha jornada de aprendizado, conectar-me com outros profissionais e inspirar a
-                        comunidade de desenvolvedores, criei o perfil <a href="https://www.instagram.com/loubackdev/" target="_blank">@loubackdev</a> no Instagram.</p>
+                        comunidade de desenvolvedores, criei o perfil <a href="https://www.instagram.com/loubackdev/"
+                            target="_blank">@loubackdev</a> no Instagram.</p>
                     <p>No meu perfil, compartilho dicas, insights e recursos relacionados ao desenvolvimento web. É um
                         espaço onde posso interagir com pessoas apaixonadas por tecnologia, trocar experiências e
                         aprender juntos.</p>
