--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="col-md-6">
                             <ul class="list-inline">
-                                <li><i class="fa-solid fa-phone"></i><strong> Telefone: </strong>(22) 992096736</li>
+                                <li><i class="fa-solid fa-phone"></i><strong> Telefone: </strong>(22) 99209-6736</li>
                                 <li><i class="fa-solid fa-envelope"></i><strong> Gmail:
                                     </strong>victorloubackfaria@gmail.com</li>
                             </ul>
