--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container"><!--container-->
             <div class="row"><!--row-->
                 <div class="col-md-6">
-                    <img src="img/perfil.png" class="img-sobre-mim img-fluid d-none d-md-block">
+                    <img src="img/logo.jpg" class="img-sobre-mim img-fluid d-none d-md-block">
                 </div>
                 <div class="col-md-6">
 
