--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul class="list-inline">
-                                <li><i class="fa-solid fa-calendar-days"></i><strong> Data de nascimento:
-                                    </strong>20/11/2000</li>
                                 <li><i class="fa-solid fa-location-dot"></i><strong> Endereço: </strong>Campos dos
                                     Goytacazes, Brasil</li>
                                 <li><i class="fa-solid fa-flag"></i><strong> Nacionalidade: </strong>Brasileiro</li>
@@ -189,7 +187,9 @@
                             <img src="img/cafe-essenza.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Café Essenza</h5>
-                                <p class="card-text"> Desenvolvido com HTML, CSS e Bootstrap, nosso objetivo foi criar um site envolvente e visualmente cativante, explorando as possibilidades do parallax para proporcionar uma experiência única aos visitantes.</p>
+                                <p class="card-text"> Desenvolvido com HTML, CSS e Bootstrap, nosso objetivo foi criar
+                                    um site envolvente e visualmente cativante, explorando as possibilidades do parallax
+                                    para proporcionar uma experiência única aos visitantes.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="https://victor-louback.github.io/Cafeteria/" target="_blank"
