--- a/index.html
+++ b/index.html
@@ -279,6 +279,23 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
+                            <img src="img/projeto-6.png" class="card-img-top" alt="Imagem do projeto">
+                            <div class="card-body">
+                                <h5 class="card-title">Orçamento Pessoal</h5>
+                                <p class="card-text">Neste projeto, utilizei HTML, Bootstrap e JavaScript para criar uma plataforma online que permite a organização das finanças pessoais. O foco principal foi aprimorar minhas habilidades em JavaScript, enquanto desenvolvo uma solução prática e eficaz para a gestão financeira.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://victor-louback.github.io/Orcamento-Pessoal/" target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
+                                        <a href="https://github.com/Victor-Louback/Orcamento-Pessoal" target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm projetos">
                             <img src="img/projeto-5.png" height="180px" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Proximo Projeto</h5>
