--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
     <main class="container text-center">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="txt1">Seu próximo desenvolvedor</h1>
-                <h1 class="txt2">front-end</h1>
+                <div>
+                    <h1 class="txt1" id="titulo1">Seu próximo desenvolvedor</h1>
+                    <h1 class="txt2" id="titulo2">front-end</h1>
+                </div>
                 <p>Me chamo Victor Louback, 22 anos, Desenvolvedor front-end HTML, CSS, JS e bootstrap <br>Saiba mais
                     sobre mim</p>
                 <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank"
@@ -321,6 +323,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
