--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
     <main class="container text-center">
         <div class="row">
             <div class="col-md-12">
-                <div>
-                    <h1 class="txt1" id="titulo1">Seu próximo desenvolvedor</h1>
-                    <h1 class="txt2" id="titulo2">front-end</h1>
-                </div>
+                <h1 class="txt1" id="titulo1">Seu próximo desenvolvedor</h1>
+                <h1 class="txt2 invisivel" id="titulo2">front-end</h1>
                 <p>Me chamo Victor Louback, 22 anos, Desenvolvedor front-end HTML, CSS, JS e bootstrap <br>Saiba mais
                     sobre mim</p>
                 <a href="https://www.linkedin.com/in/victor-louback-7a7896251/" target="_blank"
@@ -284,7 +282,10 @@
                             <img src="img/projeto-6.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Orçamento Pessoal</h5>
-                                <p class="card-text">Neste projeto, utilizei HTML, Bootstrap e JavaScript para criar uma plataforma online que permite a organização das finanças pessoais. O foco principal foi aprimorar minhas habilidades em JavaScript, enquanto desenvolvo uma solução prática e eficaz para a gestão financeira.</p>
+                                <p class="card-text">Neste projeto, utilizei HTML, Bootstrap e JavaScript para criar uma
+                                    plataforma online que permite a organização das finanças pessoais. O foco principal
+                                    foi aprimorar minhas habilidades em JavaScript, enquanto desenvolvo uma solução
+                                    prática e eficaz para a gestão financeira.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="https://victor-louback.github.io/Orcamento-Pessoal/" target="_blank"
@@ -323,7 +324,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
