Animação no Scroll

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </main>
 
-    <section id="sessao-1" class="sessao"><!--Sobre mim-->
+    <section id="sessao-1" class="sessao hidden"><!--Sobre mim-->
         <div class="row text-center">
             <div class="col-md-12">
                 <h1 class="txt-sobre-mim h1">Sobre mim</h1>
@@ -120,7 +120,7 @@
     </section><!--/Sobre mim-->
 
 
-    <section id="sessao-2" class="sessao"><!--atualmente-->
+    <section id="sessao-2" class="sessao hidden"><!--atualmente-->
         <div class="row text-center">
             <div class="col-md-12">
                 <h1 class="txt-atualemte h1">O que estou fazendo atualmente</h1>
@@ -150,7 +150,7 @@
     </section><!--/atualmente-->
 
 
-    <section id="sessao-1" class="sessao"><!--Sobre mim-->
+    <section id="sessao-1" class="sessao hidden"><!--Sobre mim-->
 
         <div class="row text-center">
             <div class="col-md-12">
